--- a/basics_ea.ipynb
+++ b/basics_ea.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "# Run query directly into a pandas dataframe\n",
-    "df = con.query_to_pandas(query)"
+    "df = connection.query_to_pandas(query)"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "#csv\n",
-    "con.query_and_save(query, fileout='test.csv')"
+    "connection.query_and_save(query, fileout='test.csv')"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "#fits\n",
-    "con.query_and_save(query, fileout='test.fits')"
+    "connection.query_and_save(query, fileout='test.fits')"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "outputs": [],
    "source": [
     "#hdf5\n",
-    "con.query_and_save(query, fileout='test.h5')"
+    "connection.query_and_save(query, fileout='test.h5')"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = con.query_to_pandas(query, prefetch=1500, iterator=True)"
+    "df = connection.query_to_pandas(query, prefetch=1500, iterator=True)"
    ]
   },
   {
