--- a/color_mag_m2.ipynb
+++ b/color_mag_m2.ipynb
@@ -18,7 +18,16 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sbn\n",
-    "#matplotlib.style.use('des_dr1')"
+    "matplotlib.style.use('des_dr1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! cat $HOME/.config/matplotlib/stylelib/des_dr1.mplstyle"
    ]
   },
   {
@@ -87,20 +96,6 @@
     "plt.xlabel('G')\n",
     "plt.ylabel('G-R')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
